--- a/5.0/index.html
+++ b/5.0/index.html
@@ -5,5 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <script src="/5.0/index.js"></script>
+  </body>
 </html>
