--- a/6.0/index.html
+++ b/6.0/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <h1>hello world</h1>
-    <script src="/6.0/control-flow.js"></script>
+    <script src="/6.0/while-gpt.js"></script>
   </body>
 </html>
